--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,26 @@ __pycache__/
 
 
 dataset*.csv
+
+# java related
+
+/_eclipse/
+/local.properties
+build
+eclipse-build
+gradle.properties
+ivy*
+javadocs
+kobaltBuild
+lib
+maven-testng-plugin-1.2.jar
+nb-configuration.xml
+out
+src/generated
+target
+test-output
+test-output-tests
+testng.iml
+z_build
+.kobalt
+.DS_Store
