--- a/JavaScript/electron_practice/electron_basic/package.json
+++ b/JavaScript/electron_practice/electron_basic/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^10.1.4"
+    "electron": "^10.1.4",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
