--- a/Programming/JavaScript/NodeJS/ToDoAppDB/package.json
+++ b/Programming/JavaScript/NodeJS/ToDoAppDB/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "ToDoApp",
+  "name": "todolist-v1",
   "version": "1.0.0",
-  "description": "to do app",
+  "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Anish Sebastian",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "ejs": "^3.1.5",
+    "ejs": "^2.7.4",
     "express": "^4.17.1",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.11",
     "mongoose": "^5.10.15"
   }
 }
